--- a/xbrl/WebContent/css/main.css
+++ b/xbrl/WebContent/css/main.css
@@ -11,7 +11,38 @@ body {
 	background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='4' height='4' viewBox='0 0 4 4'%3E%3Cpath fill='%235ac2f5' fill-opacity='0.92' d='M1 3h1v1H1V3zm2-2h1v1H3V1z'%3E%3C/path%3E%3C/svg%3E");
 	margin: 0;
 }
+/*   ================================================
+                          common
+     ================================================  */         
+.bold {
+	font-weight: bold;
+}     
+.center {
+	text-align: center;
+}   
+.right {
+	text-align: right;
+}
+.left {
+	text-align: left;
+}     
+.undercost {
+	position: absolute; 
+	top: 320px; 
+	left: 120px; 
+	font-size: 130px; 
+	color: rgba(100, 100, 100, 0.3); 
+	-moz-transform:rotate(20deg); 
+	-webkit-transform:rotate(20deg); 
+	z-index: 0;
+}
+.screen-m .undercost {
+	font-size: 90px;
+}
 
+.screen-s .undercost {
+	font-size: 50px;
+}
 /*   ================================================
                           TOP BAR
      ================================================  */                       
@@ -102,7 +133,6 @@ body {
 /*   ================================================
                        MIDDLE BAR (slick carousel)
      ================================================  */                       
-
 #middlebar {
 	width: 50%;
 	max-width: 700px;
@@ -130,6 +160,12 @@ body {
 	font-weight: normal;
 }	
 
+.screen-m #middlebar .slickpanel div.data {
+	font-size: 13px;
+}
+.screen-s #middlebar .slickpanel div.data {
+	font-size: 12px;
+}
 #middlebar .slickpanel div.title {
 	font-size: 24px;
 	font-weight: 200;
@@ -137,16 +173,28 @@ body {
 	width: 90%;
 	margin: 1px auto;
 }	
-
+.screen-m #middlebar .slickpanel div.title {
+	font-size: 22px;
+}
+.screen-s #middlebar .slickpanel div.title {
+	font-size: 16px;
+}
 #middlebar .slickpanel div.body, #middlebar .slickpanel div.body p {
 	font-size: 18px;
 	font-weight: normal;
 	text-align: left;
 	padding: 2px 6px;
 }	
-#middlebar .slickpanel div.body p {
+.screen-m #middlebar .slickpanel div.body, #middlebar .slickpanel div.body p {
+	font-size: 16px;
+}
+.screen-s #middlebar .slickpanel div.body, #middlebar .slickpanel div.body p {
+	font-size: 13px;
 }
 
+#middlebar .slickpanel div.body img {
+	float: left;
+}
 
 #middlebar .slickpanel div.continue {
 	text-align: right;
@@ -218,7 +266,7 @@ body {
 	font-weight: 200;
 	color: #333;
 }	
-
+/*
 .screen-m .box .title {
 	font-size: 16px;
 }
@@ -231,10 +279,19 @@ body {
 .screen-m  .box .more a {
 	font-size: 10px;
 }
-
+*/
 /*   ================================================
                          PAGES
-     ================================================  */                       
+     ================================================  */        
+.pagetitle {
+	font-size: 28px;
+	text-align: center;
+	font-weight: 200;
+	background: #fff;
+	width: 90%;
+	margin: 4px auto;
+}
+               
 .argument {
 	margin: 20px auto;
 	padding: 6px 8px;
@@ -244,7 +301,7 @@ body {
 }
 
 .argument .title {
-	font-size: 28px;
+	font-size: 26px;
 	text-align: center;
 	font-weight: 200;
 	/* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#addffa+0,addffa+50,addffa+100&0.2+0,1+50,0.2+100 */
@@ -272,24 +329,24 @@ a.linkhome {
     ------------------------------------- */
 @font-face {
     font-family: 'lato';
-    src: url('fonts/lato/lato-bold-webfont.woff2') format('woff2'),
-         url('fonts/lato/lato-bold-webfont.woff') format('woff');
+    src: url('./fonts/lato/lato-bold-webfont.woff2') format('woff2'),
+         url('./fonts/lato/lato-bold-webfont.woff') format('woff');
     font-weight: bold;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'lato';
-    src: url('fonts/lato/lato-regular-webfont.woff2') format('woff2'),
-         url('fonts/lato/lato-regular-webfont.woff') format('woff');
+    src: url('./fonts/lato/lato-regular-webfont.woff2') format('woff2'),
+         url('./fonts/lato/lato-regular-webfont.woff') format('woff');
     font-weight: normal;
     font-style: normal;
 }
 
 @font-face {
     font-family: 'lato';
-    src: url('fonts/lato/lato-thin-webfont.woff2') format('woff2'),
-         url('fonts/lato/lato-thin-webfont.woff') format('woff');
+    src: url('./fonts/lato/lato-thin-webfont.woff2') format('woff2'),
+         url('./fonts/lato/lato-thin-webfont.woff') format('woff');
     font-weight: 200;
     font-style: normal;
 
